<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="shows">Shows</string>
    <string name="lists">Lists</string>
    <string name="movies">Movies</string>
    <string name="statistics">Statistics</string>
    <string name="navigation_more">More</string>
    <string name="search">Search</string>
    <string name="preferences">Settings</string>
    <string name="help">Help</string>
    <string name="no_more_updates">SeriesGuide will receive no more updates for this version of Android.</string>
    <string name="show_details">Details</string>
    <string name="episode">Episode</string>
    <string name="episode_number">Episode %d</string>
    <string name="episodes">Episodes</string>
    <string name="season">Season</string>
    <string name="season_number">Season %d</string>
    <string name="specialseason">Special Episodes</string>
    <string name="ratings">Ratings</string>
    <string name="more_information">More information</string>
    <string name="navigate_up">Navigate up</string>
    <string name="description_overview">Overview</string>
    <string name="description_poster">Show poster</string>
    <string name="description_image">Episode image</string>
    <string name="description_menu_overflow">More options</string>
    <string name="clear">Clear</string>
    <string name="discard">Discard</string>
    <string name="action_display_all">Show all</string>
    <string name="web_search">Web search</string>
    <string name="add_to_homescreen">Add to Home screen</string>
    <string name="action_open">Open</string>
    <string name="sync_manually">Sync manually</string>
    <string name="sync_and_update">Sync &amp; Update</string>
    <string name="sync_and_download_all">Sync &amp; Download all</string>
    <string name="action_select_region">Select region</string>
    <string name="action_reset">Reset</string>
    <string name="action_save">Save</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_check" comment="Action when an error is displayed the user should check upon.">Check</string>
    <string name="clear_search_history">Clear search history</string>
    <string name="search_hint">Search episodes</string>
    <string name="empty_no_results">No results</string>
    <string name="updated">Updated to latest version</string>
    <string name="updated_what_is_new">What\'s new</string>
    <string name="norating">n/a</string>
    <string name="unknown">unknown</string>
    <string name="offline">Connect to the internet, then try again</string>
    <string name="app_not_available">No app available to handle this</string>
    <string name="database_error">Could not modify data</string>
    <string name="reinstall_info">Try to export your data, re-install and restore</string>
    <string name="api_error_generic">Could not talk to %s. Try again later.</string>
    <string name="api_failed">Failed: %s</string>
    <string name="copy_to_clipboard">Copied to clipboard</string>
    <string name="not_migrated">Show not migrated to TMDB data. Some actions incl. Trakt and Cloud sync might not work. Maybe search for a replacement and delete this show. Tap to view details.</string>
    <string name="status_turned_on">Turned on</string>
    <string name="share">Share</string>
    <string name="share_show">Share show</string>
    <string name="share_episode">Share episode</string>
    <string name="share_movie">Share movie</string>
    <string name="addtocalendar">Create event</string>
    <string name="addtocalendar_failed">Can not create a calendar event</string>
    <string name="comments_provided_by">Comments provided by Trakt</string>
    <string name="comments">Comments</string>
    <string name="shout_hint">Type a comment (English, 5+ words)</string>
    <string name="shout_invalid">Your comment does not follow the rules!</string>
    <string name="action_post">Post</string>
    <string name="action_edit_comment">Edit</string>
    <string name="action_delete_comment">Delete</string>
    <string name="confirmation_delete_comment">Delete this comment?</string>
    <string name="error_delete_comment">Comment not deleted, it is too old or has replies</string>
    <string name="isspoiler">Spoiler alert!</string>
    <string name="no_shouts">Be the first to comment!</string>
    <string name="refresh">Refresh</string>
    <plurals name="replies_plural">
        <item quantity="one">%d reply</item>
        <item quantity="other">%d replies</item>
    </plurals>
    <string name="episode_number_disk">DVD</string>
    <string name="episode_firstaired">Release date</string>
    <string name="episode_firstaired_unknown">Release date unknown</string>
    <string name="episode_dvdnumber">DVD Episode</string>
    <string name="original_release">Original release</string>
    <string name="show_genres">Genres</string>
    <string name="show_contentrating">Content Rating</string>
    <string name="show_release_times">Release times</string>
    <string name="episode_directors">Directors</string>
    <string name="episode_gueststars">Guest Stars</string>
    <string name="episode_writers">Writers</string>
    <string name="show_isalive">Continuing</string>
    <string name="show_isnotalive">Ended</string>
    <string name="show_isUpcoming">Upcoming</string>
    <string name="show_status_in_production">In Production</string>
    <string name="show_status_pilot">Pilot</string>
    <string name="show_status_canceled">Canceled</string>
    <string name="no_translation">No details in %1$s available, consider adding them at %2$s. Or try to change the language.</string>
    <string name="no_spoilers">Some details are hidden to prevent spoilers. To turn this off go to Settings.</string>
    <string name="format_source">Source: %s</string>
    <string name="last_updated">Last updated</string>
    <string name="custom_release_time_edit">Edit release time</string>
    <string name="custom_release_time_earlier">earlier</string>
    <string name="custom_release_time_later">later</string>
    <string name="today">today</string>
    <string name="now">now</string>
    <string name="runtime_hours_minutes_format">%1$d h %2$d min</string>
    <string name="runtime_minutes_format">%d min</string>
    <string name="mark_all">Watched all</string>
    <string name="unmark_all">Watched none</string>
    <string name="action_watched_up_to">Watched up to here</string>
    <string name="confirmation_watched_up_to">Set all episodes up to here watched?</string>
    <string name="collect_all">Collected all</string>
    <string name="uncollect_all">Collected none</string>
    <string name="action_skip">Skip</string>
    <string name="action_dont_skip">Don\'t skip</string>
    <string name="action_collection_add">Add to collection</string>
    <string name="action_collection_remove">Remove from collection</string>
    <string name="action_watched">Set watched</string>
    <string name="action_unwatched">Set not watched</string>
    <string name="state_watched">Watched</string>
    <string name="state_watched_multiple_format">Watched (%d)</string>
    <string name="state_skipped">Skipped</string>
    <string name="state_in_collection">In collection</string>
    <string name="state_on_watchlist">On watchlist</string>
    <string name="state_favorite">Favorite</string>
    <string name="title_shows_added">Added</string>
    <string name="confirm_delete">Delete %s?</string>
    <string name="delete_error">Could not delete show. Try again later.</string>
    <string name="delete_show">Delete</string>
    <string name="no_nextepisode">no next episode found</string>
    <string name="context_favorite">Add to favorites</string>
    <string name="context_unfavorite">Remove from favorites</string>
    <string name="favorited">Added to favorites</string>
    <string name="unfavorited">Removed from favorites</string>
    <string name="action_episode_notifications_on">Turn on episode notifications</string>
    <string name="action_episode_notifications_off">Turn off episode notifications</string>
    <string name="context_hide">Hide</string>
    <string name="context_unhide">Do not hide</string>
    <string name="hidden">Moved to hidden</string>
    <string name="unhidden">Show is visible again</string>
    <string name="action_shows_add">Add show</string>
    <string name="action_filter_and_sort">Filter and sort</string>
    <string name="title_filter_general">General</string>
    <string name="empty_filter">Reset filters</string>
    <string name="action_shows_filter_favorites">Favorites</string>
    <string name="action_shows_filter_unwatched">Unwatched</string>
    <string name="action_shows_filter_upcoming">Upcoming</string>
    <string name="action_shows_filter_hidden">Hidden</string>
    <string name="state_shows_filter_disabled">Disabled</string>
    <string name="state_shows_filter_included">Included</string>
    <string name="state_shows_filter_excluded">Excluded</string>
    <string name="action_shows_make_all_visible">Make all hidden visible</string>
    <string name="description_make_all_visible_format">Make all hidden shows (%s) visible again?</string>
    <string name="action_shows_sort_title">Title</string>
    <string name="action_shows_sort_latest_episode">Latest episode</string>
    <string name="action_shows_sort_oldest_episode">Oldest episode</string>
    <string name="action_shows_sort_last_watched">Last watched</string>
    <string name="action_shows_sort_remaining">Remaining episodes</string>
    <string name="action_shows_sort_status">Status</string>
    <string name="action_shows_sort_favorites">Favorites first</string>
    <string name="context_updateshow">Update</string>
    <string name="context_marknext">Watched next episode</string>
    <string name="action_episodes_switch_view">Switch view</string>
    <string name="next_to_watch">Next to watch</string>
    <string name="title_notes">Notes</string>
    <string name="calendar_settings">Calendar settings</string>
    <string name="only_favorites">Only favorite shows</string>
    <string name="calendar_only_collected">Only collected episodes</string>
    <string name="calendar_only_premieres">Only premieres</string>
    <string name="pref_infinite_scrolling">Unlimited days</string>
    <string name="list_add">Add list</string>
    <string name="list_manage">Manage list</string>
    <string name="list_item_manage">Manage lists</string>
    <string name="list_item_remove">Remove from list</string>
    <string name="action_lists_reorder">Reorder lists</string>
    <string name="watchlist_add">Add to watchlist</string>
    <string name="watchlist_remove">Remove from watchlist</string>
    <string name="checkin">Check in</string>
    <string name="pref_quick_checkin">Quick check in</string>
    <string name="pref_quick_checkin_summary">Do not ask for a check in message</string>
    <string name="pref_onlyseasoneps">Hide special episodes</string>
    <string name="pref_onlyseasonepssummary">Special episodes disappear from everywhere except season list</string>
    <string name="pref_exactdates">Display exact dates</string>
    <string name="pref_exactdates_summary">\"October 31\" instead of \"in 3 days\"</string>
    <string name="pref_nospoilers">Prevent spoilers</string>
    <string name="pref_nospoilers_summary">Hide details until an episode is watched</string>
    <string name="pref_language">Preferred content language</string>
    <string name="pref_language_fallback">Alternative language</string>
    <string name="sort">Sort by</string>
    <string name="action_sort_ignore_articles">Ignore articles</string>
    <string name="pref_upcominglimit">Upcoming range</string>
    <string name="pref_offset">Manual time offset</string>
    <string name="hide_watched">Hide watched episodes</string>
    <string name="action_upgrade">Unlock all features</string>
    <string name="action_stream">Stream or purchase</string>
</resources>