<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_action_episodes_watched"
        android:title="@string/action_watched" />
    <item
        android:id="@+id/menu_action_episodes_not_watched"
        android:title="@string/action_unwatched" />
    <item
        android:id="@+id/menu_action_episodes_watched_up_to"
        android:title="@string/action_watched_up_to" />
    <item
        android:id="@+id/menu_action_episodes_collection_add"
        android:title="@string/action_collection_add" />
    <item
        android:id="@+id/menu_action_episodes_collection_remove"
        android:title="@string/action_collection_remove" />
    <item
        android:id="@+id/menu_action_episodes_skip"
        android:title="@string/action_skip" />
    <item
        android:id="@+id/menu_action_episodes_dont_skip"
        android:title="@string/action_dont_skip" />

</menu>