<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_action_movies_set_watched"
        android:title="@string/action_watched" />
    <item
        android:id="@+id/menu_action_movies_set_unwatched"
        android:title="@string/action_unwatched" />
    <item
        android:id="@+id/menu_action_movies_watchlist_add"
        android:title="@string/watchlist_add" />
    <item
        android:id="@+id/menu_action_movies_watchlist_remove"
        android:title="@string/watchlist_remove" />
    <item
        android:id="@+id/menu_action_movies_collection_add"
        android:title="@string/action_collection_add" />
    <item
        android:id="@+id/menu_action_movies_collection_remove"
        android:title="@string/action_collection_remove" />

</menu>