<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_action_lists_add"
        android:icon="@drawable/ic_list_add_white_24dp"
        android:orderInCategory="0"
        android:title="@string/list_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_lists_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_lists_edit"
        android:orderInCategory="2"
        android:title="@string/list_manage"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_lists_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="3"
        android:title="@string/sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_action_lists_reorder"
        android:orderInCategory="4"
        android:title="@string/action_lists_reorder"
        app:showAsAction="never" />

</menu>