<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="0"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_action_shows_advanced"
        android:orderInCategory="6"
        android:title="@string/sync_manually"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menu_update"
                android:title="@string/sync_and_update" />
            <item
                android:id="@+id/menu_fullupdate"
                android:title="@string/sync_and_download_all" />
        </menu>
    </item>

</menu>
