<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/fragment_movie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/buttons_min_height"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonMovieWatched"
            style="@style/Widget.SeriesGuide.Button.MediaItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_watch_black_24dp"
            android:text="@string/action_watched" />

        <Button
            android:id="@+id/buttonMovieWatchlisted"
            style="@style/Widget.SeriesGuide.Button.MediaItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_list_add_white_24dp"
            android:text="@string/watchlist_add" />

        <Button
            android:id="@+id/buttonMovieCollected"
            style="@style/Widget.SeriesGuide.Button.MediaItem"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_collect_black_24dp"
            android:text="@string/action_collection_add" />

    </LinearLayout>

    <View
        android:id="@+id/dividerMovieButtons"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginRight="@dimen/large_padding"
        android:background="?attr/sgColorDivider" />

    <Button
        android:id="@+id/buttonMovieCheckIn"
        style="@style/Widget.SeriesGuide.Button.Borderless.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_button"
        android:layout_marginRight="@dimen/padding_button"
        android:contentDescription="@string/checkin"
        android:text="@string/checkin"
        app:icon="@drawable/ic_checkin_black_24dp"
        app:iconGravity="start" />

    <Button
        android:id="@+id/buttonMovieStreamingSearch"
        style="@style/Widget.SeriesGuide.Button.Borderless.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_button"
        android:layout_marginRight="@dimen/padding_button"
        android:contentDescription="@string/action_stream"
        android:text="@string/action_stream"
        app:icon="@drawable/ic_play_arrow_black_24dp"
        app:iconGravity="start" />

</LinearLayout>
